[package]
name = "betting_game"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
solana-program = "^1.8.1"
anchor-spl = "0.19.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
bytemuck = { version = "1.4.0" }
arrayref = "0.3.6"
